[gd_scene load_steps=9 format=2]

[ext_resource path="res://Maze.gd" type="Script" id=1]
[ext_resource path="res://road_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/kenney_racingpack_updated/PNG/Cars/mixkit-completion-of-a-level-2063.wav" type="AudioStream" id=5]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/kenney_racingpack_updated/PNG/Cars/robotik-love-2137.mp3" type="AudioStream" id=8]
[ext_resource path="res://CPU.tscn" type="PackedScene" id=9]

[node name="Maze" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 25 )
tile_set = ExtResource( 2 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
collision_mask = 6
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Goal" parent="." instance=ExtResource( 6 )]
position = Vector2( 982, 563 )
collision_mask = 6

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 32, 60 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Finished" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CPU" parent="." instance=ExtResource( 9 )]

[connection signal="start_game" from="HUD" to="." method="new_round"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="cpu_win" from="Goal" to="." method="cpu_wins_round"]
[connection signal="player_win" from="Goal" to="." method="player_wins_round"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
